--- a/index.html
+++ b/index.html
@@ -4,75 +4,84 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Remote Image Info by farmani</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/farmani/RemoteImageInfo">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/farmani/RemoteImageInfo/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/farmani/RemoteImageInfo/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1 class="header">Remote Image Info</h1>
+        <p class="header">Get image information without downloading whole file</p>
 
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/farmani/RemoteImageInfo/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/farmani/RemoteImageInfo/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/farmani/RemoteImageInfo">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/farmani">farmani</a></p>
+
+
+      </header>
       <section>
-        <div id="title">
-          <h1>Remote Image Info</h1>
-          <p>Get image information without downloading whole file</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/farmani">farmani</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+        <h1>
+<a id="remoteimageinfo" class="anchor" href="#remoteimageinfo" aria-hidden="true"><span class="octicon octicon-link"></span></a>RemoteImageInfo</h1>
 
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<p>FastImage finds the dimensions or filetype of a remote image file given its uri by fetching as little as needed, based on the excellent <a href="https://github.com/sdsykes/fastimage">Ruby implementation by Stephen Sykes</a>.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<div class="highlight highlight-php"><pre><span class="pl-s1"><span class="pl-k">&lt;</span>?<span class="pl-c1">php</span> </span>
+<span class="pl-s1"></span>
+<span class="pl-s1"><span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">'</span>RemoteImageInfo.php<span class="pl-pds">'</span></span>;</span>
+<span class="pl-s1"></span>
+<span class="pl-s1"><span class="pl-smi">$uri</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">"</span>http://farm9.staticflickr.com/8151/7357346052_54b8944f23_b.jpg<span class="pl-pds">"</span></span>;</span>
+<span class="pl-s1"></span>
+<span class="pl-s1"><span class="pl-c">// loading image into constructor</span></span>
+<span class="pl-s1"><span class="pl-smi">$image</span> <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-c1">RemoteImageInfo</span>(<span class="pl-smi">$uri</span>);</span>
+<span class="pl-s1"><span class="pl-c1">list</span>(<span class="pl-smi">$width</span>, <span class="pl-smi">$height</span>) <span class="pl-k">=</span> <span class="pl-smi">$image</span><span class="pl-k">-&gt;</span>getSize();</span>
+<span class="pl-s1"><span class="pl-c1">echo</span> <span class="pl-s"><span class="pl-pds">"</span>dimensions: <span class="pl-pds">"</span></span> <span class="pl-k">.</span> <span class="pl-smi">$width</span> <span class="pl-k">.</span> <span class="pl-s"><span class="pl-pds">"</span>x<span class="pl-pds">"</span></span> <span class="pl-k">.</span> <span class="pl-smi">$height</span>;</span>
+<span class="pl-s1"></span>
+<span class="pl-s1"><span class="pl-c">// or, create an instance and use the 'load' method</span></span>
+<span class="pl-s1"><span class="pl-smi">$image</span> <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-c1">RemoteImageInfo</span>();</span>
+<span class="pl-s1"><span class="pl-smi">$image</span><span class="pl-k">-&gt;</span>load(<span class="pl-smi">$uri</span>);</span>
+<span class="pl-s1"><span class="pl-smi">$type</span> <span class="pl-k">=</span> <span class="pl-smi">$image</span><span class="pl-k">-&gt;</span>getType();</span>
+<span class="pl-s1"><span class="pl-c1">echo</span> <span class="pl-s"><span class="pl-pds">"</span>filetype: <span class="pl-pds">"</span></span> <span class="pl-k">.</span> <span class="pl-smi">$type</span>;</span></pre></div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<ul>
+<li><a href="https://github.com/sdsykes/fastimage">https://github.com/sdsykes/fastimage</a></li>
+<li><a href="http://pennysmalls.com/find-jpeg-dimensions-fast-in-pure-ruby-no-ima">http://pennysmalls.com/find-jpeg-dimensions-fast-in-pure-ruby-no-ima</a></li>
+<li><a href="http://snippets.dzone.com/posts/show/805">http://snippets.dzone.com/posts/show/805</a></li>
+<li><a href="http://www.anttikupila.com/flash/getting-jpg-dimensions-with-as3-without-loading-the-entire-file/">http://www.anttikupila.com/flash/getting-jpg-dimensions-with-as3-without-loading-the-entire-file/</a></li>
+<li><a href="http://imagesize.rubyforge.org/">http://imagesize.rubyforge.org/</a></li>
+</ul>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>RemoteImageInfo is released under the MIT license. It is simple and easy to understand and places almost no restrictions on what you can do with the software. <a href="http://en.wikipedia.org/wiki/MIT_License">More Information</a></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Releases are available for download from
+<a href="http://farmani.github.io/RemoteImageInfo/">GitHub</a>.</p>
       </section>
-
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+		
   </body>
 </html>
